# Vichesta

./: README.md
protobot_navigation/: CMakeLists.txt  package.xml
protobot_navigation/config/: costmap_common_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
protobot_navigation/launch/: gmapping.launch  move_base.launch  protobot_gmapping.launch
takshak/launch/: controller.launch  controller_viz.launch  world1.launch
takshak/script/: aruco_detector.py  balls.py  controller.py  door_detection.py  navigator.py
takshak/viz/: rviz.rviz
takshak/worlds/: world1.world
